# VideoDL

./: .gitignore  CONTEXT.md  README.md  agents.md  claude.md
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/src/: main.rs
docs/: API_SPEC.md  ARCHITECTURE.md  SCOPE.md  STYLE_GUIDE.md  TOOLS.md  codec-conversion-ui-spec.md
docs/adr/: 0001-rust-backend-python-clients.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/: gui_tk.py  headless_client.py
